[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/card/card.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60, 72.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 72.5 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.984314, 0.94902, 0.878431, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.96, 0.89, 0.68, 1 )
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[node name="Card" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 60, 72.5 )
shape = SubResource( 5 )

[node name="Area" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area"]
position = Vector2( 60, 72.5 )
shape = SubResource( 1 )

[node name="View" type="PanelContainer" parent="."]
margin_right = 120.0
margin_bottom = 145.0
rect_min_size = Vector2( 120, 145 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 6 )

[node name="Warpper" type="VBoxContainer" parent="View"]
margin_left = 3.0
margin_top = 3.0
margin_right = 117.0
margin_bottom = 142.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Header" type="PanelContainer" parent="View/Warpper"]
margin_right = 114.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 3 )

[node name="Title" type="Label" parent="View/Warpper/Header"]
margin_right = 32.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "标题"

[node name="Body" type="Control" parent="View/Warpper"]
margin_top = 26.0
margin_right = 114.0
margin_bottom = 139.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
size_flags_vertical = 3

[node name="Image" type="Sprite" parent="View/Warpper/Body"]
position = Vector2( 58, 55 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="gui_input" from="View" to="." method="_on_View_gui_input"]
